--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "hasCpSection": false
     },
     "require": {
-        "php": "^7.0|^8.0",
+        "php": "^8.0",
         "craftcms/cms": "^3.0",
         "laposta/laposta-api-php": "^1.5"
     },
